--- a/scss/index.scss
+++ b/scss/index.scss
@@ -276,28 +276,29 @@ input:focus + input:hover {
 				
 			    border: 1px solid #000000;
 			    border-radius: 0 6px 6px 0;
-			    height: 48px;
+			    height: 52px;
 			    position: absolute;
-			    right: 3px;
-			    top: 6px;
-			    width: 24px;	
+			    right: -3px;
+			    top: 3px;
+			    width: 30px;	
 				
 				.btn {
-				    height: 15px;
+				    height: 16px;
+				    width: 30px;
 				    
 				    &.up {
-				    	@include sprite($img-sprite, up, false, 3, 0);
+				    	@include sprite($img-sprite, up, false, 6, 0);
 				    }
 				    
 				    &.remove {
 					    border-bottom: 1px solid #000;
 					    border-top: 1px solid #000;
 				    
-				    	@include sprite($img-sprite, remove, false, 3, 0);
+				    	@include sprite($img-sprite, remove, false, 6, 0);
 				    }
 
 				    &.down {
-				       	@include sprite($img-sprite, down, false, 3, 0);
+				       	@include sprite($img-sprite, down, false, 6, 0);
 				    }
 
 				}
@@ -310,18 +311,36 @@ input:focus + input:hover {
 	}
 	
 	.add-btn {
-	    border: 1px solid #000;
-	    border-radius: 0 0 6px 6px;
-	    display: block;
-	    height: 24px;
-	    margin: 0 auto;
-	    position: relative;
-	    top: -1px;
-	    width: 24px;
+		background: none repeat scroll 0 0 #eee;
+		border: 1px solid #ccc;
+		color: #999;
+		cursor: pointer;
+		display: block;
+		font-size: 18px;
+		height: 50px;
+		line-height: 50px;
+		margin-top: 10px;
+		text-align: center;
+		width: 350px;
 	    
-	    .btn {
+	    span {
+	    	display: inline-block;
+	    	width: 24px;
+	    	height: 24px;
+	    	margin: -6px 0;
+	    	
+	    	background-image: $img-sprite;
+	    	background-repeat: no-repeat;
 	    	@include sprite($img-sprite, add, false, 4, 4);
+	    	
+	    	opacity: .5;
 	    }
+	    
+		&:hover {
+			span {
+	    		opacity: 1;
+	    	}
+	    }	    
 	}
 	
 	
