Highlighting a list item or perf data when hovering perf data highlights or list  items
* Implemented BoundPerfdataHighlighterView that binds perf data
* Rendering perf data at top of the list
* Highlighting the number of the performance data when hovering a list item and
  highlighting the list item when hovering the number in the performance data

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -142,7 +142,16 @@ input:focus + input:hover {
 
 
 .main-box {
-	margin: 50px auto 0;
+	margin: 20px auto 0;
+}
+
+#perfdata-header {
+	background-color: #ddd;
+	height: 25px;
+	margin: 0 auto;
+	padding: 15px 20px;
+	width: 600px;
+	text-align: center;
 }
 
 #perfdata-box {
@@ -214,6 +223,10 @@ input:focus + input:hover {
 			border-right: 1px solid #000;
 			border-bottom: 1px solid #000;
 			border-left: 1px solid #000;
+			
+			&.highlight {
+				background-color: #fec;
+			}
 		}
 	
 		.var-regex, .configs {
