--- a/scss/index.scss
+++ b/scss/index.scss
@@ -41,12 +41,12 @@ input[type="text"] {
 	
 	&:focus {
 		border: 1px solid #000000;
-		box-shadow: 0 0 2px #da0; 
+		box-shadow: 0 0 1px 2px #FD0; 
 	}
 }
 
 .focus {
-    box-shadow: 0 0 2px #da0 !important;
+    box-shadow: 0 0 1px 2px #FD0 !important;
 }
 
 
